sumo/tests/netconvert/import/XML/errors/broken_edge/edge#fromnode__missing4/errors.netconvert
Error: The from-node is not given for edge '4'.
Quitting (on error).
